Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -118,9 +118,8 @@ nav{
         margin-left: -12.5%;
     }
     .backgroundCBR{
-        height: 1000px;
+        height: 800px;
     }
-
     .parentImg .logo-text span{
         width: 98%;
         font-size: 25px;
@@ -262,13 +261,12 @@ html{
 }
 .parentImg .logo-text img{
     
-    width: 37%;
+    width: 32%;
     border-radius: 50%;
     box-shadow: 0px 27px 50px 0px rgba(58, 50, 29, 0.37);
 
 }
 .parentImg span{
-    
     position: absolute;
     
     width: 100%;
